private-dormitory/force-app/main/default/objects/Inventory__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <description>The capacity of the Conference hall/ Jacuzzi</description>
    <label>Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>