private-dormitory/force-app/main/default/objects/Inventory__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Washing Machine</fullName>
            </value>
            <value>
                <fullName>Dryer</fullName>
            </value>
            <value>
                <fullName>Table Tennis</fullName>
            </value>
            <value>
                <fullName>Conference Hall</fullName>
            </value>
            <value>
                <fullName>Gaming Console</fullName>
            </value>
            <value>
                <fullName>Volleyball Court</fullName>
            </value>
            <value>
                <fullName>Jacuzzi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>