private-dormitory/force-app/main/default/objects/Inventory__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>The location of the inventory (floor, basement)</description>
    <label>Location</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>